crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__await__recover.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/await/recover.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            49,
        ),
        range: 0..284,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        4,
                    ),
                    range: 117..130,
                    value: Await(
                        ExprAwait {
                            node_index: NodeIndex(
                                3,
                            ),
                            range: 117..130,
                            value: Await(
                                ExprAwait {
                                    node_index: NodeIndex(
                                        2,
                                    ),
                                    range: 123..130,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                1,
                                            ),
                                            range: 129..130,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        9,
                    ),
                    range: 154..162,
                    value: Await(
                        ExprAwait {
                            node_index: NodeIndex(
                                8,
                            ),
                            range: 154..162,
                            value: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(
                                        7,
                                    ),
                                    range: 160..162,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                6,
                                            ),
                                            range: 161..162,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        14,
                    ),
                    range: 163..173,
                    value: Await(
                        ExprAwait {
                            node_index: NodeIndex(
                                13,
                            ),
                            range: 163..173,
                            value: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(
                                        12,
                                    ),
                                    range: 170..172,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                11,
                                            ),
                                            range: 171..172,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        19,
                    ),
                    range: 214..227,
                    value: Await(
                        ExprAwait {
                            node_index: NodeIndex(
                                18,
                            ),
                            range: 214..227,
                            value: Yield(
                                ExprYield {
                                    node_index: NodeIndex(
                                        17,
                                    ),
                                    range: 220..227,
                                    value: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(
                                                    16,
                                                ),
                                                range: 226..227,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        28,
                    ),
                    range: 228..245,
                    value: Await(
                        ExprAwait {
                            node_index: NodeIndex(
                                27,
                            ),
                            range: 228..245,
                            value: Lambda(
                                ExprLambda {
                                    node_index: NodeIndex(
                                        26,
                                    ),
                                    range: 234..245,
                                    parameters: Some(
                                        Parameters {
                                            range: 241..242,
                                            node_index: NodeIndex(
                                                20,
                                            ),
                                            posonlyargs: [],
                                            args: [
                                                ParameterWithDefault {
                                                    range: 241..242,
                                                    node_index: NodeIndex(
                                                        23,
                                                    ),
                                                    parameter: Parameter {
                                                        range: 241..242,
                                                        node_index: NodeIndex(
                                                            22,
                                                        ),
                                                        name: Identifier {
                                                            id: Name("x"),
                                                            range: 241..242,
                                                            node_index: NodeIndex(
                                                                21,
                                                            ),
                                                        },
                                                        annotation: None,
                                                    },
                                                    default: None,
                                                },
                                            ],
                                            vararg: None,
                                            kwonlyargs: [],
                                            kwarg: None,
                                        },
                                    ),
                                    body: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                25,
                                            ),
                                            range: 244..245,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        33,
                    ),
                    range: 246..254,
                    value: Await(
                        ExprAwait {
                            node_index: NodeIndex(
                                32,
                            ),
                            range: 246..254,
                            value: UnaryOp(
                                ExprUnaryOp {
                                    node_index: NodeIndex(
                                        31,
                                    ),
                                    range: 252..254,
                                    op: UAdd,
                                    operand: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                30,
                                            ),
                                            range: 253..254,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        38,
                    ),
                    range: 255..263,
                    value: Await(
                        ExprAwait {
                            node_index: NodeIndex(
                                37,
                            ),
                            range: 255..263,
                            value: UnaryOp(
                                ExprUnaryOp {
                                    node_index: NodeIndex(
                                        36,
                                    ),
                                    range: 261..263,
                                    op: USub,
                                    operand: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                35,
                                            ),
                                            range: 262..263,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        43,
                    ),
                    range: 264..272,
                    value: Await(
                        ExprAwait {
                            node_index: NodeIndex(
                                42,
                            ),
                            range: 264..272,
                            value: UnaryOp(
                                ExprUnaryOp {
                                    node_index: NodeIndex(
                                        41,
                                    ),
                                    range: 270..272,
                                    op: Invert,
                                    operand: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                40,
                                            ),
                                            range: 271..272,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(
                        48,
                    ),
                    range: 273..284,
                    value: Await(
                        ExprAwait {
                            node_index: NodeIndex(
                                47,
                            ),
                            range: 273..284,
                            value: UnaryOp(
                                ExprUnaryOp {
                                    node_index: NodeIndex(
                                        46,
                                    ),
                                    range: 279..284,
                                    op: Not,
                                    operand: Name(
                                        ExprName {
                                            node_index: NodeIndex(
                                                45,
                                            ),
                                            range: 283..284,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | # Nested await
5 | await await x
  |       ^^^^^^^ Syntax Error: Await expression cannot be used here
6 |
7 | # Starred expressions
  |


  |
7 | # Starred expressions
8 | await *x
  |       ^^ Syntax Error: Starred expression cannot be used here
9 | await (*x)
  |


   |
 7 | # Starred expressions
 8 | await *x
 9 | await (*x)
   |        ^^ Syntax Error: Starred expression cannot be used here
10 |
11 | # Invalid expression as per precedence
   |


   |
11 | # Invalid expression as per precedence
12 | await yield x
   |       ^^^^^^^ Syntax Error: Yield expression cannot be used here
13 | await lambda x: x
14 | await +x
   |


   |
11 | # Invalid expression as per precedence
12 | await yield x
13 | await lambda x: x
   |       ^^^^^^^^^^^ Syntax Error: Lambda expression cannot be used here
14 | await +x
15 | await -x
   |


   |
12 | await yield x
13 | await lambda x: x
14 | await +x
   |       ^^ Syntax Error: Unary '+' expression cannot be used here
15 | await -x
16 | await ~x
   |


   |
13 | await lambda x: x
14 | await +x
15 | await -x
   |       ^^ Syntax Error: Unary '-' expression cannot be used here
16 | await ~x
17 | await not x
   |


   |
14 | await +x
15 | await -x
16 | await ~x
   |       ^^ Syntax Error: Unary '~' expression cannot be used here
17 | await not x
   |


   |
15 | await -x
16 | await ~x
17 | await not x
   |       ^^^^^ Syntax Error: Boolean 'not' expression cannot be used here
   |
